<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/login_screen" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile_screen" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_screen" />

    <item
        android:id="@+id/storeFragment"
        android:icon="@drawable/baseline_store_24"
        android:title="@string/store_screen" />

</menu>